# algorithms-and-structures

./: .gitignore
Algorithms/: pom.xml
Algorithms/src/main/java/java_algorithms/: App.java
Algorithms/src/main/java/java_algorithms/graphs/: Edge.java  Graph.java  Vertex.java
Algorithms/src/main/java/java_algorithms/misc/: CoinChange.java  DynamicFibonacci.java  GreedyKnapsack.java  TowersOfHanoi.java
Algorithms/src/main/java/java_algorithms/numbers/: EuclidsAlgorithm.java
Algorithms/src/main/java/java_algorithms/sort/: BubbleSort.java  DutchNationalFlag.java  InsertionSort.java  MergeSort.java  QuickSort.java  ShellSort.java  SortingAlgorithm.java
Algorithms/src/test/java/java_algorithms/: AppTest.java
Algorithms/src/test/java/java_algorithms/graphs/: BreadthFirstTraversalTest.java  DepthFirstTraversalTest.java
Algorithms/src/test/java/java_algorithms/misc/: TowersOfHanoiTest.java
Algorithms/src/test/java/java_algorithms/numbers/: EuclidsAlgorithmTest.java
Algorithms/src/test/java/java_algorithms/sort/: BubbleSortTest.java  DutchNationalFlagTest.java  InsertionSortTest.java  MergeSortTest.java  QuickSortTest.java  ShellSortTest.java
Structures/: CMakeLists.txt  CStructures.c  CStructures.cpp  test.py
Structures/headers/: BHeap.h  BHeapArray.h  BSTree.h  BTree.h  Graph.h  HashTable.h  LinkedList.h  LinkedListDict.h  Queue.h  Stack.h
Structures/src/: BHeap.c  BHeapArray.c  BSTree.c  HashTable.c  LinkedList.c  LinkedListDict.c  Queue.c  Stack.c
